style.css
@import url('https://fonts.googleapis.com/css2?family=Geologica&family=Lato&family=Open+Sans:wght@400;500&family=Poppins&family=Roboto&display=swap');
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Geologica", sans-serif;
    color: white;
    font-size: 25px;
    overflow: hidden;
}

:root {
    --color--1: #2f2841;
    --color--2: #5800ff;
    --color--3: #0096ff;
    --color--4: #00d7ff;
    --color--5: #514869;
    --color--6: #d2dee1;
    --color--gradient: linear-gradient(60deg,var(--color--1),var(--color--4),var(--color--2));
}

body{
    background-image: var(--color--gradient);
    background-size: 600% 600%;
    animation: bgAnimation 15s linear infinite;
    width: 100vw;
    height: 100vh;
}

.container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
}

.box {
    background: var(--color--1);
    width: 25%;
    height: 70%;
    padding: 1.75%;
    border-radius: 17px;
    animation: shadowAnimation 10s linear infinite;
    display: flex;
    flex-direction: column;
}

.box > h1 {
    text-align: center;
    font-size: 28px;
    font-weight: 600;
    color: var(--color--4);
    text-shadow: 0px 2px 5px var(--color--4);
    text-transform: uppercase;
    margin-bottom: 15%;
    
}

input {
    padding: 5%;
    height: 50px;
    color: var(--color--6);
    background-color: var(--color--5);
    outline: none;
    border: none;
    border-radius: 5px;
    margin-bottom: 5%;
    box-shadow: 0px 10px 40px #00000056;
}

label {
    font-size: 20px;
    margin-bottom: 7px;
    color: var(--color--6);
}

.de > p {
    color: var(--color--6);
    font-size: 20px;
    margin-bottom: 7px;
}

.para >p {
    color: var(--color--6);
    font-size: 20px;
    margin-bottom: 7px;
}

.reverse {
    display: flex;
    align-items: center;
    justify-content: space-around;
    cursor: pointer;
}

.select-input {
    display: flex;
    width: 100%;
    height: 50px;
    border-radius: 5px;
    background-color: var(--color--5);
    margin-bottom: 5%;
    box-shadow: 0px 5px 20px #00000056;
    align-items: center;
    padding: 0 20px;
    cursor: pointer;
    transition: all 0.3s ease;
}

.select-input:hover {
    border: 1px solid var(--color--4);
}

.select-input img {
    max-width: 20px;
}

.select-input select {
    width: 100%;
    cursor: pointer;
    font-size: 1rem;
    background: var(--color--5);
    margin: 0 -5px 5px;
    color: var(--color--6);
    outline: none !important;
    border: none;
    display: flex;
    margin-left: 5%;
    margin-top: 1%;
}

p {
    font-size: 25px;
    color: var(--color--6);
    margin-bottom: 5%;
}

.exchange {
    width: 100%;
    height: 50px;
    background-color: var(--color--4);
    outline: none;
    border: none;
    border-radius: 5px;
    color: var(--color--1);
    text-transform: uppercase;
    font-weight: 600;
    font-size: 1rem;
    box-shadow: 0px 5px 20px var(--color--4);
    cursor: pointer;
}

.exchange:hover {
    box-shadow: 0px 5px 20px 5px var(--color--4);
    transition: 0.25s;
}

@keyframes bgAnimation {
    0% {
        background-position: 0 85%;
    }
    50% {
        background-position: 100% 20%;
    }
    100% {
        background-position: 0% 85%;
    }
}

@keyframes shadowAnimation {
    0% {
        box-shadow: 11px 11px 21px var(--color--1) ;
    }
    50% {
        box-shadow: -11px 11px 21px var(--color--1) ;
    }
    100% {
        box-shadow: 11px 11px 21px var(--color--1) ;
    }
}

